[package]
name = "lowdown"
version = "0.1.0"
edition = "2024"
description = "An unobtrusive reverse HTTP proxy that injects faults between a client and backend service."
license = "MIT"

[lib]
name = "lowdown"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
async-trait = "0.1"
bytes = "1"
http = "1"
parking_lot = "0.12"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
